Refactor: update blog references from Lizberries to The Lizards and remove unused files

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,7 +26,7 @@ layout: default
 
     // Determina dove tornare
     let target = '/';
-    if (ref && ref.includes('blog.lizberries.thelizards.it/page')) {
+    if (ref && ref.includes('blog.thelizards.it/page')) {
       target = ref;
     }
 
